Fixing z-index and the JS error on missing sliders

--- a/code/framework/templates/default/__grid/default__grid.scss
+++ b/code/framework/templates/default/__grid/default__grid.scss
@@ -1,5 +1,12 @@
 @mixin default__grid {
   overflow-x: hidden;
+  position: relative;
+
+  .articles,
+  .footer {
+    position: relative;
+    z-index: 1;
+  }
 
   .article,
   .articles,
